# gigaam-android-ime

./: .gitignore  README-EN.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/servideus/gigaamime/: SettingsActivity.kt
app/src/main/java/com/servideus/gigaamime/audio/: AudioCapture.kt  AudioResampler.kt  AudioSilenceProcessor.kt  SpeechEndpointDetector.kt
app/src/main/java/com/servideus/gigaamime/data/: ModelRepository.kt  ModelSelectionStore.kt  ModelSpec.kt  PerformanceSettings.kt
app/src/main/java/com/servideus/gigaamime/ime/: GigaamImeService.kt
app/src/main/res/color/: ime_shift_text_color.xml
app/src/main/res/drawable/: bg_ime_key.xml  bg_ime_key_action.xml  bg_ime_key_action_normal.xml  bg_ime_key_action_pressed.xml  bg_ime_key_normal.xml  bg_ime_key_pressed.xml  bg_ime_key_special.xml  bg_ime_key_special_normal.xml  bg_ime_key_special_pressed.xml  bg_ime_toolbar_button.xml  bg_ime_toolbar_button_normal.xml  bg_ime_toolbar_button_pressed.xml  bg_ime_toolbar_button_primary.xml  bg_ime_toolbar_button_primary_normal.xml  bg_ime_toolbar_button_primary_pressed.xml  ic_enter_large.xml  ic_shift_active_wide.xml  ic_shift_inactive_outline.xml
app/src/main/res/layout/: activity_settings.xml  ime_view.xml
app/src/main/res/values/: colors.xml  ime_keyboard_styles.xml  strings.xml  themes.xml
app/src/main/res/xml/: gigaam_ime.xml
native/gigaam_core/: Cargo.toml
native/gigaam_core/src/: gigaam.rs  lib.rs
scripts/: build-rust-android.ps1
(+1 files in other folders)
